<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_detail"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:background="@color/colorPrimary"
    tools:context="com.unity.autrom.DetailActivity">

    <LinearLayout
        android:padding="10dp"
        android:gravity="center"
        android:background="@color/colorTextIcon"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="match_parent">

        <ImageView
            android:src="@drawable/tango"
            android:id="@+id/imageView_product"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="match_parent">

        <LinearLayout
            android:paddingTop="10dp"
            android:gravity="right"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:textSize="18sp"
                android:textColor="@color/colorTextIcon"
                android:textStyle="bold"
                android:text="ID TROLI : "
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:textSize="18sp"
                android:textColor="@color/colorTextIcon"
                android:textStyle="bold"
                android:id="@+id/id_troli"
                android:text="@string/app_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:gravity="center"
            android:orientation="vertical"
            android:padding="10dp"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="0dp">

            <LinearLayout
                android:padding="10dp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:textSize="16sp"
                    android:textColor="@color/colorTextIcon"
                    android:textStyle="bold"
                    android:text="@string/product"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content" />

                <TextView
                    android:textSize="16sp"
                    android:textColor="@color/colorTextIcon"
                    android:id="@+id/nama_produk"
                    android:text="@string/product"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <LinearLayout
                android:padding="10dp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:textSize="16sp"
                    android:textColor="@color/colorTextIcon"
                    android:textStyle="bold"
                    android:text="@string/price"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content" />

                <TextView
                    android:textSize="16sp"
                    android:textColor="@color/colorTextIcon"
                    android:id="@+id/harga"
                    android:text="@string/price"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <LinearLayout
                android:padding="10dp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:textSize="16sp"
                    android:textColor="@color/colorTextIcon"
                    android:textStyle="bold"
                    android:text="@string/stock"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content" />

                <TextView
                    android:textSize="16sp"
                    android:textColor="@color/colorTextIcon"
                    android:id="@+id/stock"
                    android:text="@string/stock"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <LinearLayout
                android:padding="10dp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:textSize="16sp"
                    android:textColor="@color/colorTextIcon"
                    android:textStyle="bold"
                    android:text="@string/exp"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content" />

                <TextView
                    android:textSize="16sp"
                    android:textColor="@color/colorTextIcon"
                    android:id="@+id/exp"
                    android:text="@string/exp"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <LinearLayout
                android:padding="10dp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:textSize="16sp"
                    android:textColor="@color/colorTextIcon"
                    android:textStyle="bold"
                    android:text="@string/legal"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content" />

                <TextView
                    android:textSize="16sp"
                    android:textColor="@color/colorTextIcon"
                    android:text="Halal"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <LinearLayout
                android:padding="10dp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:visibility="invisible"
                    android:textSize="16sp"
                    android:textColor="@color/colorTextIcon"
                    android:textStyle="bold"
                    android:text="@string/exp"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content" />

                <TextView
                    android:visibility="invisible"
                    android:textSize="16sp"
                    android:textColor="@color/colorTextIcon"
                    android:id="@+id/kuantitas"
                    android:text="@string/exp"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content" />

            </LinearLayout>

        </LinearLayout>


    </LinearLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/add_cart"
        android:layout_gravity="bottom|right"
        android:layout_marginBottom="10dp"
        android:layout_marginRight="10dp"
        android:src="@drawable/ic_add_shopping_cart_black_24dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />



</LinearLayout>
